feat: allow to start SMS for TDX framework and to expose TEE properties